--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Angella Yu's Portfolio</title>
+    <title>Mallika's Portfolio</title>
 </head>
 <body>
-    <h1>Angela Yu's Portfolio</h1>
+    <h1>Mallika's Portfolio</h1>
     <h2>Iam a Web Developer</h2>
     <hr/>
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
